# 2022_ComputerGraphics_CourseProject

./: CMakeLists.txt  readme.md
media/: test.txt
projects/base/: light.h  object3d.h  skybox.cpp  texture.cpp
projects/finalProject/: character.cpp  character.h  geometry.cpp  geometry.h  main.cpp  material.cpp  material.h  physicalObject.cpp  physicalObject.h  po_camera.cpp  po_camera.h  scene.cpp  scene.h  screenshot.h  simple_obj.cpp  simple_obj.h  test_scene.cpp  test_scene.h  useImgui.cpp  useImgui.h
